Changing full layout of homepage

--- a/project/static/css/aboutus-content.css
+++ b/project/static/css/aboutus-content.css
@@ -1,6 +1,7 @@
 body {
-  background-color: #285430;
+  background-color: white;
 }
+
 .esvabout {
   background-color: rgb(105, 105, 105);
   width: 100%;
