--- a/project/static/css/scrolling.css
+++ b/project/static/css/scrolling.css
@@ -1,6 +1,6 @@
 .title1 {
-    background-color: #e5d9b6;
-    color: #5f8d4e;
+    background-color: white;
+    color:#283746;
     height: 100vh;
     display: flex;
 }
