--- a/project/static/css/video.css
+++ b/project/static/css/video.css
@@ -1,7 +1,7 @@
 figure {
   display: block;
   padding: 20px 15%;
-  background-color: #285430;
+  background-color: white;
 }
 
 figcaption {
@@ -9,7 +9,7 @@ figcaption {
   text-align: center;
   font-weight: 700;
   margin-bottom: 20px;
-  color: #e5d9b6;
+  color: #283746;
 }
 
 @media (max-width: 600px) {
@@ -20,7 +20,7 @@ figcaption {
 
 figcaption:hover {
   transform: scale(1.2);
-  color: #e5d9b6;
+  color: #283746;
 }
 
 #body-video {
