--- a/project/templates/productfeature.html
+++ b/project/templates/productfeature.html
@@ -32,8 +32,9 @@
   </head>
 
   <body>
-    <h1 class="h1ofslideshow">Sản phẩm nổi bật<table></table></h1>
     <div class="container-fluid my-5" id="container-product">
+    <div class = "containerrealofproductfeature">
+    <h1 class="h1ofproduct">Sản phẩm nổi bật<table></table></h1>
       <div class="row">
         <div class="col-12 m-auto">
           <div class="owl-2 owl-carousel owl-theme">
@@ -80,11 +81,10 @@
           </div>
         </div>
       </div>
-    </div>
     <a href="/product/" class="seemoreofproduct">Xem thêm</a>
-
+  </div>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-
+  </div>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
