--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -23,8 +23,11 @@
     {% include 'navbar.html' %}
 
     <!-- include body.html here -->
-    {% include 'scrolling.html' %}{% include 'sponsor.html' %}{% include 'slideshow.html' %} {% include
-    'productfeature.html' %}{% include 'video.html' %}
+    {% include 'scrolling.html' %}
+    {% include 'slideshow.html' %} 
+    {% include 'sponsor.html' %}
+    {% include'productfeature.html' %}
+    {% include 'video.html' %}
     <div>{% include 'aboutus_content.html' %}</div>
     {% include 'footer1.html' %}
     <script
