--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -37,6 +37,7 @@
 
   <body>
     <!-- Navbar expands from large and collapses from size smaller than large -->
+    <div class = "sticky-top">
     <nav class="navbar navbar-expand-lg navbar-collapse-md" id="navbar-id">
       <!-- Navbar spans the entire width of any viewport -->
       <div class="container-fluid" id="container-all">
@@ -106,6 +107,7 @@
         </div>
       </div>
     </nav>
+  </div>
 
     <!-- JS bootstrap -->
     <script
