about us background color change

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -43,15 +43,14 @@
 
         {% include 'animation.html' %}
 
-        <hr class="hr-aboutus">
-        <div class="backgroundchange">
+        
+        <div class="ourteam-background">
           <div class="mainstyle mainstyle-2">
             <h2 class="head2executive">Ban điều hành</h2>
             {% include 'ourteam.html' %}
           </div>
         </div>
-        <div class="color-gap"><br><br><br><br></div>
-        <hr class="hr-aboutus2">
+        
         <div class="mainstyle mainstyle-3">
           <h2 class="head2ourteam">Câu chuyện của Eco Smart Việt Nam</h2>
           <!-- Founder Content -->
