--- a/project/static/css/aboutus.css
+++ b/project/static/css/aboutus.css
@@ -1,209 +1,179 @@
 /* BO FONT CHUNG */
 body {
-    font-family: "Heebo", sans-serif;
+  font-family: "Heebo", sans-serif;
 }
 
 .bodystyle {
-    font-family: "Heebo", sans-serif;
-    font-size: 20px;
-    background-color: #285430;
-    color: #E5D9B6;
+  font-family: "Heebo", sans-serif;
+  font-size: 20px;
+  background-color: #ffffff;
 }
 
 .bodystyle p {
-    text-align: justify;
+  text-align: justify;
 }
 
-
 /*-----------------------------------------------------*/
-
 
 /* BO FONT HEADING */
 
 .head1 {
-    display:flex;
-    background-image: url('../img/activities_page/titlebackground.jpg');
-    background-size: cover;
-    padding-top: 20px;
-    height: 15vh;
-    width: 100%;
-    align-items:center;
-    justify-content:center;
-  }
-
-.head1 h1 {
-    font-size: 5vh;
-    font-weight: bolder;
-    color: #FCF5E5;
+  display: flex;
+  background-image: url("../img/activities_page/titlebackground.jpg");
+  background-size: cover;
+  padding-top: 20px;
+  height: 15vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  font-size: 5vh;
+  font-weight: bolder;
+  color: #ffffff;
 }
+
 .head1 h1:hover {
-    transform: scale(1.2)
+  transform: scale(1.05);
 }
 #aboutus-content {
-    background-size: cover;
-    margin-top: 20px;
-    height: 200px;
-    width: 100%;
+  background-size: cover;
+  margin-top: 20px;
+  height: 200px;
+  width: 100%;
 }
 
 #aboutus-content h1 {
-    font-size: 80px;
-    font-weight: bolder;
-    color: rgb(65, 128, 49);
-    text-align: center;
-    padding-top: 80px;
+  font-size: 80px;
+  font-weight: bolder;
+  color: rgb(65, 128, 49);
+  text-align: center;
+  padding-top: 80px;
 }
 .head2awareness {
-    margin-top: 2rem;
-    margin-bottom:2rem;
-    font-size: 4vh;
-    font-weight: bolder;
-    text-align: center;
-    color: #FCF5E5;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  font-size: 4vh;
+  font-weight: bolder;
+  text-align: center;
+  color: #283746;
 }
-.head2executive{
-    margin-top: 50px;
-    font-size: 4vh;
-    font-weight: bolder;
-    text-align: center;
-    color: #285430;
+.head2executive {
+  margin-top: 2rem;
+  font-size: 4vh;
+  font-weight: bolder;
+  text-align: center;
+  color: #fff;
 }
 .head2ourteam {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    font-size: 4vh;
-    font-weight: bolder;
-    text-align: center;
-    color: #FCF5E5;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 4vh;
+  font-weight: bolder;
+  text-align: center;
+  color: #283746;
 }
 
 /*-----------------------------------------------------*/
 
 .head2-2 {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .mainstyle {
-    width: 50%;
-    margin: 0 auto;
-    animation: pageLoading 2s;
+  width: 50%;
+  margin: 0 auto;
+  animation: pageLoading 2s;
 }
 
 .mainstyle-1 {
-    margin: 50px auto 50px auto;
+  margin: 50px auto 50px auto;
 }
 
 .mainstyle-2 {
-    padding-top: 100px;
+  padding-top: 0.7rem;
 }
 
 .mainstyle-3 {
-    padding-top: 100px;
-    color: #E5D9B6;
+  padding-top: 0.7rem;
 }
 
-.backgroundchange {
-    background-color: #E5D9B6;
+.ourteam-background {
+  background-color: #285430;
 }
 
-@media(max-width: 1000px) {
-    .mainstyle {
-        width: 80%;
-        margin: 0 auto;
-    }
+@media (max-width: 1000px) {
+  .mainstyle {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
 .caption {
-    width: 100%;
+  width: 100%;
 }
 
 .founder_pic {
-    margin: 30px auto;
-    color: #FCF5E5;
-    text-align: center;
-    font-weight: bold;
-    font-size:3vh;
+  margin: 30px auto;
+  color: #283746;
+  text-align: center;
+  font-weight: bold;
+  font-size: 3vh;
 }
 
 .question {
-    font-weight: bold;
-    margin-top:50px;
-    font-size:2.3vh;
-    color:#FCF5E5;
+  font-weight: bold;
+  margin-top: 50px;
+  font-size: 2.3vh;
+  color: #283746;
 }
 .statementfromTri {
-    font-size:2vh;
-    color:#F3E5AB;
+  font-size: 2vh;
+  color: #283746;
 }
 .answer {
-    font-size:1.8vh;
-    color:#F3E5AB;
+  font-size: 1.8vh;
+  color: #283746;
 }
 
-@media (max-width:625px){
-    .head1 h1{
-        font-size:4vh;
-    }
-    .head2awareness {
-        margin-top: 2rem;
-        margin-bottom:2rem;
-        font-size: 3vh;
-        font-weight: bolder;
-        text-align: center;
-        color: #FCF5E5;
-    }
-    .head2executive{
-        margin-top: 2rem;
-        font-size: 3vh;
-        font-weight: bolder;
-        text-align: center;
-        color: #FCF5E5;
-    }
-    .head2ourteam {
-        margin-top: 2rem;
-        font-size: 3vh;
-        font-weight: bolder;
-        text-align: center;
-        color: #FCF5E5;
-    }
+@media (max-width: 625px) {
+  .head1 h1 {
+    font-size: 4vh;
+  }
+  .head2awareness {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-size: 3vh;
+    font-weight: bolder;
+    text-align: center;
+  }
+  .head2executive {
+    margin-top: 2rem;
+    font-size: 3vh;
+    font-weight: bolder;
+    text-align: center;
+  }
+  .head2ourteam {
+    margin-top: 2rem;
+    font-size: 3vh;
+    font-weight: bolder;
+    text-align: center;
+    color: #fcf5e5;
+  }
 }
 .interview {
-    margin-bottom: 110px;
+  margin-bottom: 1.5rem;
 }
 
 @keyframes pageLoading {
-    from {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .d-block {
-    animation: pageLoading 2s;
+  animation: pageLoading 2s;
 }
-
-.hr-aboutus {
-	border: 0;
-    margin-bottom: 0;
-    margin-top: 100px; 
-    height: 5px; 
-    background: linear-gradient(to right, black, white, black);
-}
-
-.color-gap {
-    background-color: #E5D9B6;
-}
-
-.hr-aboutus2 {
-	border: 0;
-    margin-bottom: 0;
-    margin-top: 0;
-    height: 5px; 
-    background: linear-gradient(to right, black, white, black);
-}
-
-
