--- a/project/static/css/animation.css
+++ b/project/static/css/animation.css
@@ -1,8 +1,8 @@
 .myContainer {
-  font-family: 'Heebo', sans-serif;
+  font-family: "Heebo", sans-serif;
   font-size: 14px;
   width: 45vw;
-  height:auto;
+  height: auto;
   margin: 2px auto;
 }
 
@@ -17,13 +17,13 @@
 .animation-content {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1vw;
-  font-weight:bold;
-  background-color:	#ECFFDC;
-  color:#494F55;
-  width:45vw;
+  font-weight: bold;
+  background-color: #fff;
+  color: #283746;
+  width: 45vw;
   padding-top: 0.5vw;
   opacity: 85%;
-  margin-bottom:2rem;
+  margin-bottom: 2rem;
 }
 
 .animation-content p {
