--- a/project/templates/scrolling.html
+++ b/project/templates/scrolling.html
@@ -33,7 +33,7 @@
           sản phẩm thân thiện môi trường.
         </p>
 
-        <a class="button-scroll" href="#aboutus-scroll">Đọc thêm</a>
+        <a class="button-scroll" href="#aboutus-scroll">Đọc thêm <span class = "button-icon">↘</span></a>
       </div>
     </div>
   </body>
