change underline navbar and layout of product feature

--- a/project/static/css/navbar.css
+++ b/project/static/css/navbar.css
@@ -132,6 +132,10 @@ body {
     font-weight: 600;
 }
 
+#navbar-id{
+    border-bottom:1px solid green;
+}
+
 .nav-item {
     margin: 0px 10px;
     float: left;
