--- a/project/templates/productfeature.html
+++ b/project/templates/productfeature.html
@@ -33,9 +33,8 @@
 
   <body>
     <div class="container-fluid my-5" id="container-product">
-    <div class = "containerrealofproductfeature">
     <h1 class="h1ofproduct">Sản phẩm nổi bật<table></table></h1>
-      <div class="row">
+      <div class="rowofproduct">
         <div class="col-12 m-auto">
           <div class="owl-2 owl-carousel owl-theme">
             <div class="item mb-4">
@@ -80,7 +79,6 @@
 
           </div>
         </div>
-      </div>
     <a href="/product/" class="seemoreofproduct">Xem thêm</a>
   </div>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
