--- a/project/templates/aboutus_content.html
+++ b/project/templates/aboutus_content.html
@@ -11,7 +11,7 @@
     />
   </head>
 
-  <body>
+  <body class="body-aboutuscontent">
     <section id="aboutus-scroll">
       <div class="esvabout animated">
         <video autoplay muted loop id="myVideo">
