--- a/project/templates/cart.html
+++ b/project/templates/cart.html
@@ -60,7 +60,6 @@
           src="{{ url_for('static', filename='img/products/product_page_4.jpg') }}"
           alt=""
           style="height: 30px"
-          }}
         />
       </div>
       <div class="counter">
@@ -74,7 +73,7 @@
         <div class="remove"><u>Remove</u></div>
       </div>
     </div>
-    <hr />
+    <hr class="hr-cart">
     <div class="checkout">
       <div class="total">
         <div>
