--- a/project/templates/footer1.html
+++ b/project/templates/footer1.html
@@ -4,7 +4,7 @@
 />
 <link rel="stylesheet" href="../static/css/footer1.css" />
 
-<footer>
+<footer class="footer">
   <div class="footer-content">
     <h4>Eco Smart Vietnam</h4>
     <p>
