--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -35,7 +35,7 @@
     />
   </head>
 
-  <body>
+  <body class="navbar-body">
     <!-- Navbar expands from large and collapses from size smaller than large -->
     <div class = "sticky-top">
     <nav class="navbar navbar-expand-lg navbar-collapse-md" id="navbar-id">
