--- a/project/static/css/activities_page.css
+++ b/project/static/css/activities_page.css
@@ -108,7 +108,7 @@ img{
   transition: 0.3s ;
 }
 .elementor-pagination{
-  background-color: #E5D9B6;
+  background-color: white;
   display: flex;
   text-align: center;
   align-items: center;
