--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -26,6 +26,7 @@
     {% include 'scrolling.html' %}
     {% include 'slideshow.html' %} 
     {% include 'sponsor.html' %}
+    {% include 'achievement.html' %}
     {% include'productfeature.html' %}
     {% include 'video.html' %}
     <div>{% include 'aboutus_content.html' %}</div>
