--- a/project/static/css/slideshow.css
+++ b/project/static/css/slideshow.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 .h1ofslideshow {
   margin-top: 2rem;
-  font-size: 35px;
+  font-size: 2rem;
   text-align: center;
   font-weight: 700;
   margin-bottom: 20px;
@@ -56,4 +56,16 @@
   border-radius:1rem;
   padding-left:4rem;
   padding-right:4rem;
+}
+
+@media(max-width:730px){
+  .h1ofslideshow{
+    font-size:1.5rem;
+  }
+}
+
+@media(max-width:600px){
+  .h1ofslideshow{
+    font-size:1.3rem;
+  }
 }
