--- a/project/templates/animation.html
+++ b/project/templates/animation.html
@@ -60,7 +60,7 @@
 
             <img
               src="{{ url_for('static', filename='img/aboutus/aware1.jpg') }}"
-              class="d-block"
+              class="d-block img-border"
             />
             <div class="animation-content">
               <p>In 10 centuries, a new plastic bottle will decompose.</p>
@@ -78,7 +78,7 @@
             <!-- <img src="aware2.jpg" class="d-block" alt="..." /> -->
             <img
               src="{{ url_for('static', filename='img/aboutus/aware2.jpg') }}"
-              class="d-block"
+              class="d-block img-border"
             />
             <div class="animation-content">
               <p>If now, inaction, then when?</p>
@@ -94,7 +94,7 @@
             <!-- <img src="mission.jpg" class="d-block" alt="..." /> -->
             <img
               src="{{ url_for('static', filename='img/aboutus/mission.jpg') }}"
-              class="d-block"
+              class="d-block img-border"
             />
             <div class="animation-content">
               <p>
@@ -116,7 +116,7 @@
             <!-- <img src="history.jpg" class="d-block" alt="..." /> -->
             <img
               src="{{ url_for('static', filename='img/aboutus/history.jpg') }}"
-              class="d-block"
+              class="d-block img-border"
             />
             <div class="animation-content">
               <p>With those things, ECO SMART VIETNAM was born.</p>
