--- a/project/static/css/animation.css
+++ b/project/static/css/animation.css
@@ -21,9 +21,16 @@
   background-color: #fff;
   color: #283746;
   width: 45vw;
-  padding-top: 0.5vw;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   opacity: 85%;
   margin-bottom: 2rem;
+  border: 2px solid #365949;
+  border-top: none;
+  border-radius: 1rem;
+  animation: pageLoading 2s;
 }
 
 .animation-content p {
@@ -64,4 +71,13 @@
     font-size: 2.5vw;
     text-transform: uppercase;
   }
+}
+
+.img-border {
+  border: 5px solid #365949;
+  border-radius: 20px;
+}
+
+.mainstyle h2:hover {
+  transform: scale(1.2);
 }
