--- a/project/templates/ourteam.html
+++ b/project/templates/ourteam.html
@@ -11,7 +11,7 @@
 
 <body>
     <section id="ecoteam">
-        <div class="department">
+        <div class="department first-department">
             <!--Ban Chu Tich-->
             <!--Viet Hoan-->
             <div class="card">
@@ -149,7 +149,7 @@
                 <div class="icons"></div>
             </div>
         </div>
-        <div class="department">
+        <div class="department last-department">
             <!--IT Department-->
             <!--Ninh Giang-->
             <div class="card">
