fix titles of some pages

--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -10,7 +10,7 @@
       href="{{ url_for('static', filename='css/activities_page.css') }}"
     />
 
-    <title>Activities</title>
+    <title>Hoạt Động</title>
     <link
       rel="icon"
       href="{{ url_for('static', filename='img/aboutus/logo2.png') }}"
