--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>About Us</title>
+    <title>Về Chúng Tôi</title>
     <link
       rel="icon"
       href="{{ url_for('static', filename='img/aboutus/logo2.png') }}"
