--- a/project/templates/product.html
+++ b/project/templates/product.html
@@ -22,7 +22,7 @@
     type="image/x-icon"
     />
 </head>
-<body>
+<body class="product-body">
 <!-- Messenger Plugin chat Code -->
 <div id="fb-root"></div>
 
@@ -54,7 +54,7 @@
   }(document, 'script', 'facebook-jssdk'));
 </script>
 
-{% include 'navbar.html' %}
+{% include 'navbar.html' %} {% include 'feedback.html' %}
     <div class="bodystyle">
         <div class="head1"><h1>Sản Phẩm</h1></div>
 <div class="menu">
