--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -18,7 +18,7 @@
     />
   </head>
 
-  <body style="font-family: 'Heebo', sans-serif">
+  <body style="font-family: 'Inter', sans-serif">
     <!-- include navbar.html here -->
     {% include 'navbar.html' %}
 
