--- a/project/static/css/animation.css
+++ b/project/static/css/animation.css
@@ -1,5 +1,5 @@
 .myContainer {
-  font-family: "Heebo", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 14px;
   width: 45vw;
   height: auto;
@@ -15,7 +15,7 @@
 }
 
 .animation-content {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 1vw;
   font-weight: bold;
   background-color: #fff;
