--- a/project/static/css/navbar.css
+++ b/project/static/css/navbar.css
@@ -8,7 +8,7 @@
     background-color: white;
     padding-top: 0;
     padding-bottom: 0;
-    font-family: "Heebo", sans-serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 600;
 }
@@ -127,7 +127,7 @@
 .input-box {
     background-color: white;
     color: #283746;
-    font-family: "Heebo", sans-serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 600;
 }
