Continue changing font

--- a/project/static/css/aboutus.css
+++ b/project/static/css/aboutus.css
@@ -1,10 +1,10 @@
 /* BO FONT CHUNG */
 .body-aboutus {
-  font-family: "Heebo", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .bodystyle {
-  font-family: "Heebo", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 20px;
   background-color: #ffffff;
 }
