--- a/project/templates/activities/page3.html
+++ b/project/templates/activities/page3.html
@@ -6,10 +6,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/activities_page.css') }}"
-    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto&display=swap" rel="stylesheet">
+    
 
     <title>Activities</title>
     <link
@@ -24,7 +25,7 @@
     />
   </head>
 
-  <body style="font-family: 'Heebo', sans-serif">
+  <body style="font-family: 'Inter', sans-serif">
     {% include 'navbar.html' %}
     <div class="bodystyle">
       <div class="head1">
