--- a/project/templates/contactus.html
+++ b/project/templates/contactus.html
@@ -20,10 +20,10 @@
       href="{{ url_for('static', filename='css/button.css') }}"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Heebo&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto&display=swap" rel="stylesheet">
+
 
     <script
       type="text/javascript"
@@ -42,7 +42,7 @@
     ></script>
   </head>
 
-  <body style="font-family: 'Heebo', sans-serif">
+  <body style="font-family: 'Inter', sans-serif">
     {% include 'navbar.html' %}
 
     <div class="contact-us-body">
