--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -23,13 +23,13 @@
       href="{{ url_for('static', filename='css/aboutus.css') }}"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Heebo&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto&display=swap" rel="stylesheet">
+
   </head>
 
-  <body style="font-family: 'Heebo', sans-serif" class="body-aboutus">
+  <body style="font-family: 'Inter', sans-serif" class="body-aboutus">
     {% include 'navbar.html' %}
     
     <div class="bodystyle">
