--- a/project/templates/activities/page4.html
+++ b/project/templates/activities/page4.html
@@ -18,13 +18,13 @@
       type="image/x-icon"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Heebo&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto&display=swap" rel="stylesheet">
+
   </head>
 
-  <body style="font-family: 'Heebo', sans-serif">
+  <body style="font-family: 'Inter', sans-serif">
     {% include 'navbar.html' %}
     <div class="bodystyle">
       <div class="head1">
